[package]
name = "oxidized-alpha"
version = "0.0.1"
edition = "2021"

[dependencies]
irox-bits = { version = "0.1.0", default-features = false, features = ["alloc"] }
snafu = { version = "0.8.2", default-features = false, features = ["unstable-core-error"] }
miniz_oxide = { version = "0.7.2" }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
